# drbd

./: .gitignore  .gitlab-ci.yml  .gitmodules  ChangeLog  INSTALL  Makefile  Makefile.in  README  README.drbd-utils  README.md  ROADMAP  autogen.sh  configure.ac  drbd-kernel.spec  drbd-kernel.spec.in  drbd-km.spec  drbd-km.spec.in  drbd-kmod.cdx.json.in  drbd.spec.in  filelist-redhat  filelist-suse  preamble  preamble-rhel5  preamble-sles11  upgrade_0.6.x_to_0.7.0.txt  upgrade_0.7.0_to_0.7.1.txt
.gitlab/: changelog.awk  checkpatch.sh  drbd-prepare-release.sh  gitlab-utils.sh  kernels-from-vms.py  kibana-version-comparison-url  upload.sh
.gitlab/drbd-build-docker/: Dockerfile  Makefile
Documentation/: application-resync-synchronization.rst
benchmark/: Makefile  README  dm.c  io-latency-test.c  run.sh
checks/: check_flag_overflow.py  check_ldev_access.py  enum_bitops.cocci  iterator_rcu_suffix.cocci
coccinelle/: enum_bitops.cocci
common/: drbd_meta_data.h  drbd_protocol.h  drbd_strings.c  drbd_strings.h  drbd_transport.h
common/linux/: drbd.h  drbd_genl.h  drbd_genl_api.h  drbd_limits.h  genl_magic_func.h
debian/: TODO  changelog  control  control.modules  control.modules.in  copyright  drbd-dkms.dkms  drbd-module-_KVERS_.postinst.modules.in  drbd-module-source.dirs  drbd-ueficert.install  drbd.dirs  drbd.docs  drbd.postinst  drbd0.7-source.dirs  drbd0.7-utils.docs  drbd0.7-utils.postrm  drbd0.7-utils.prerm  drbd0.7.conffiles  drbd0.7.manpages  drbd0.7.postinst  drbd8-module-_KVERS_.postinst.modules.in  drbd8-module-_KVERS_.postrm.modules.in  drbd8-module-_KVERS_.preinst.modules.in  drbd8-module-source.dirs  drbd8-utils.dirs  drbd8-utils.postinst  drbd8-utils.postrm  drbd8-utils.prerm  kernel-patch-wup.kpatches  modass.drbd-module-source  modass.drbd0.7-module-source  modass.drbd8-module-source  rules  rules.MODULE  substvars  watch
docker/: Dockerfile.amzn2  Dockerfile.bionic  Dockerfile.centos7  Dockerfile.centos8  Dockerfile.flatcar  Dockerfile.focal  Dockerfile.jammy  Dockerfile.noble  Dockerfile.resolute  Dockerfile.rhel10  Dockerfile.rhel7  Dockerfile.rhel8  Dockerfile.rhel9  Dockerfile.sles15  Dockerfile.sles15sp1  entry.sh
documentation/: Makefile  Makefile.in  Makefile.lang  NFS-Server-README.txt  aspell.en.per  drbd.conf.sgml  drbd.conf.xml  drbd.conf.xml.in  drbd.conf.xsl  drbd.sgml  drbd.xml  drbdadm.sgml  drbdadm.xml  drbddisk.sgml  drbddisk.xml  drbdmeta.sgml  drbdmeta.xml  drbdsetup-options.xml  drbdsetup.sgml  drbdsetup.xml  drbdsetup.xml.in  drbdsetup.xsl  fencing-by-constraints.txt  xml-usage-to-docbook.xsl
documentation/HOWTO/: DRBD-HOWTO.sgml  Makefile
documentation/ja/: drbd.conf.sgml  drbd.sgml
documentation/pt_BR/: drbd.sgml
drbd/: ChangeLog  INSTALL  Kbuild  Kbuild.drbd  Kbuild.drbd-module-sources  Kconfig  Makefile  Makefile-2.4  Makefile-2.6  Makefile.cocci-sources  Makefile.spatch  Makefile.vars  PERSONALITY.txt  README  TODO  cn_queue.c  connector.c  data-structure-v9.txt  drbd.spec  drbd.spec.in  drbd_actlog.c  drbd_bitmap.c  drbd_compat_types.h  drbd_compat_wrappers.h  drbd_config.h  drbd_dax_pmem.c  drbd_dax_pmem.h  drbd_debugfs.c  drbd_debugfs.h  drbd_fs.c  drbd_int.h  drbd_interval.c  drbd_interval.h  drbd_journal.c  drbd_kref_debug.c  drbd_kref_debug.h  drbd_legacy_84.c  drbd_legacy_84.h  drbd_main.c  drbd_nl.c  (+44 more)
drbd/benchmark/: Makefile  dm.c  report_to_html.pl  run.sh  send_n_sync.sh
drbd/compat/: blkdev_issue_zeroout.c  idr.c  kobject.c
drbd/debian/: Makefile.modules  README.Debian  TODO  changelog  conffiles  control  control.in.MODULE  control.modules  copyright  drbd.docs  drbd.install  drbd.postinst  kernel-export-wup.patch  kernel-patch-wup.README.Debian  rules
drbd/documentation/: Makefile  Makefile.lang  NFS-Server-README.txt  datadisk.sgml  drbd.conf.sgml  drbd.sgml  drbdadm.sgml  drbdsetup.sgml
drbd/drbd-kernel-compat/: .gitignore  README.md  annotate-diff-with-original-file-position-pragmas.pl  bitops.h  blkdev_issue_zeroout.c  build_cocci_cache.sh  check_patch_names.cocci  cocci_macros.h  collect_compat_h.sh  drbd_wrappers.c  drbd_wrappers.h  gen_compat_patch.sh  gen_patch_names.c  idr.c  kobject.c  lru_cache.c  nsecs_to_jiffies.c  spatch_works.sh  splitdiff.pl
misc/: SECURE-BOOT-KEY-linbit.com.der  checkpatch.sh  commit-msg  copy-to-mainline.sh  dkms.conf  merge.sh  pre-commit  prepare-commit-msg  twopc-graph
rpm-macro-fixes/: README  kmodtool.rhel5.diff  macros.kernel-source.sles11-sp1.diff  macros.kernel-source.sles11.diff  macros.rhel5.diff  suse_macros.sles10.diff  symset-table.diff
sbom/: Makefile  drbd-kmod.cdx.json.in  drbd-kmod.spdx.json.in
scripts/: Makefile  Makefile.in  README  README.rhcs_fence  adjust_drbd_config_h.sh  block-drbd  crm-fence-peer.sh  crm-outdate-peer.sh  drbd  drbd-overview.pl  drbd.conf  drbd.conf.example  drbd.gentoo  drbd.metadata.rhcs  drbd.ocf  drbd.rules  drbd.sh.rhcs  drbdadm.bash_completion  drbddisk  drbdupper  get_uts_release.sh  global_common.conf  notify.sh  outdate-peer.sh  patch-kernel  pretty-proc-drbd.sh  rhcs_fence  snapshot-resync-target-lvm.sh  stonith_admin-fence-peer.sh  unsnapshot-resync-target-lvm.sh
testing/: Makefile  access_and_verify.c  drbd_states.c  ioctl_structs_sizes.c  read_gc.pl  show_size.c  tag-magic.h  tag-test.h  tag-test1.c  uml-2.6.23.gdbinit  uml-2.6.gdbinit  uml-screen-debug  uml_profile-USER@HOST  write_gc.pl
tools/: Makefile.am  README  dopd.c  dopd.h  drbd-peer-outdater.c
user/: Makefile  Makefile.in  config_flags.c  config_flags.h  drbd_endian.h  drbd_limits.h  drbd_nl.h  drbd_tag_magic.h  drbdadm.h  drbdadm_adjust.c  drbdadm_dump.c  drbdadm_dump.h  drbdadm_main.c  drbdadm_minor_table.c  drbdadm_parser.c  drbdadm_parser.h  drbdadm_parser.y  drbdadm_postparse.c  drbdadm_scanner.fl  drbdadm_usage_cnt.c  drbdmeta.c  drbdmeta_parser.h  drbdmeta_scanner.fl  drbdmeta_unfinished_rewrite.c  drbdsetup.c  drbdsetup_cn.c  drbdsetup_colors.c  drbdsetup_colors.h  drbdsetup_genl.c  drbdsetup_nl.c  drbdtool_common.c  drbdtool_common.h  libgenl.c  libgenl.h  registry.c  registry.h  unaligned.h  wrap_printf.c  wrap_printf.h
(+780 files in other folders)
